jam: make providers explicit JPMS modules