@@ -45,32 +45,11 @@
 
   <build>
     <plugins>
-      <!-- The Vector API (jdk.incubator.vector) must be added at compile + test time. -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <compilerArgs>
-            <arg>--add-modules</arg>
-            <arg>jdk.incubator.vector</arg>
-          </compilerArgs>
-        </configuration>
-      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-          <argLine>--add-modules jdk.incubator.vector -Djdk.incubator.vector.VECTOR_ACCESS_OOB_CHECK=0</argLine>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-        <configuration>
-          <additionalOptions>
-            <additionalOption>--add-modules</additionalOption>
-            <additionalOption>jdk.incubator.vector</additionalOption>
-          </additionalOptions>
+          <argLine>--add-modules jdk.incubator.vector --enable-native-access=ALL-UNNAMED -Djdk.incubator.vector.VECTOR_ACCESS_OOB_CHECK=0</argLine>
         </configuration>
       </plugin>
     </plugins>
